--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@react-navigation/native-stack": "^6.2.5",
     "add": "^2.0.6",
     "feather-icons": "^4.28.0",
+    "i18next": "^21.4.2",
     "pod": "^0.9.0",
     "react": "17.0.2",
+    "react-i18next": "^11.14.1",
     "react-native": "0.66.1",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-localize": "^2.1.5",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.3",
     "react-native-safe-area-context": "^3.3.2",
