--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-i18next": "^11.14.1",
     "react-native": "0.66.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-drop-down-item": "^1.1.0",
+    "react-native-dropdown-picker": "^5.2.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
