--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
@@ -17,6 +19,7 @@
     "react-i18next": "^11.14.1",
     "react-native": "0.66.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-calculator": "^0.5.2",
     "react-native-drop-down-item": "^1.1.0",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-elements": "^3.4.2",
