--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-slider-box": "^1.1.10",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.5",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^8.1.0",
     "react-router-native": "^5.2.1",
     "yarn": "^1.22.17"
