add data for drawer navigation

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "^3.8.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-number-format": "^4.8.0",
     "react-router-native": "^5.2.1",
     "yarn": "^1.22.17"
   },
