--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "add": "^2.0.6",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-number-format": "^4.8.0",
     "react-router-native": "^5.2.1",
