--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+MYAPP_RELEASE_STORE_FILE=mywallet.keystore
+MYAPP_RELEASE_STORE_PASSWORD=123456
+MYAPP_RELEASE_KEY_ALIAS=mywallet
+MYAPP_RELEASE_KEY_PASSWORD=123456
