--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.66.1",
     "react-native-animatable": "^1.3.3",
     "react-native-calculator": "^0.5.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-drop-down-item": "^1.1.0",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-elements": "^3.4.2",
