--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "add": "^2.0.6",
     "feather-icons": "^4.28.0",
     "i18next": "^21.4.2",
+    "moment": "^2.29.1",
     "pod": "^0.9.0",
     "react": "17.0.2",
     "react-i18next": "^11.14.1",
     "react-native": "0.66.1",
     "react-native-animatable": "^1.3.3",
     "react-native-calculator": "^0.5.2",
+    "react-native-datefield": "^0.3.5",
     "react-native-dotenv": "^3.3.1",
     "react-native-drop-down-item": "^1.1.0",
     "react-native-dropdown-picker": "^5.2.3",
